# pin-project-lite

./: .deny.toml  .git-blame-ignore-revs  .rustfmt.toml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/: bors.toml  dependabot.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
src/: lib.rs
tests/: README.md  compiletest.rs  drop_order.rs  expandtest.rs  lint.rs  overwriting_core_crate.rs  proper_unpin.rs  test.rs
tests/doc/: Cargo.toml
tests/expand/: Cargo.toml  README.md  build.rs
tests/expand/default/: enum.expanded.rs  struct.expanded.rs
tests/expand/multifields/: enum.expanded.rs  struct.expanded.rs
tests/expand/naming/: enum-all.expanded.rs  enum-mut.expanded.rs  enum-none.expanded.rs  enum-ref.expanded.rs  struct-all.expanded.rs  struct-mut.expanded.rs  struct-none.expanded.rs  struct-ref.expanded.rs
tests/expand/not_unpin/: enum.expanded.rs  struct.expanded.rs
tests/expand/pinned_drop/: enum.expanded.rs  enum.rs  struct.expanded.rs  struct.rs
tests/expand/pub/: enum.expanded.rs  struct.expanded.rs
tests/expand/tests/: expandtest.rs
tests/expand/tests/expand/: default-enum.expanded.rs  default-struct.expanded.rs  multifields-enum.expanded.rs  multifields-struct.expanded.rs  multifields-struct.rs  naming-enum-all.expanded.rs  naming-enum-all.rs  naming-enum-mut.expanded.rs  naming-enum-none.expanded.rs  naming-enum-ref.expanded.rs  naming-struct-all.expanded.rs  naming-struct-all.rs  naming-struct-mut.expanded.rs  naming-struct-none.expanded.rs  naming-struct-ref.expanded.rs  pub-enum.expanded.rs  pub-struct.expanded.rs
tests/include/: basic.rs
tests/lint/: Cargo.toml  lib.rs
tests/no-core/: Cargo.toml  lib.rs
tests/no-std/: Cargo.toml  lib.rs
tests/ui/: invalid-bounds.rs  invalid-bounds.stderr  overlapping_lifetime_names.stderr  packed.stderr  proper_unpin.stderr
tests/ui/not_unpin/: conflict-unpin.stderr  negative_impls_stable.stderr
tests/ui/pin_project/: conflict-drop.stderr  conflict-unpin.stderr  invalid-bounds.stderr  invalid.stderr  negative_impls_stable.stderr  overlapping_lifetime_names.stderr  overlapping_unpin_struct.stderr  packed.stderr  unsupported.stderr
tests/ui/pinned_drop/: call-drop-inner.stderr  conditional-drop-impl.stderr
