[package]
name = "pin-project-lite"
version = "0.2.13"
edition = "2018"
rust-version = "1.37"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/pin-project-lite"
keywords = ["pin", "macros"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
exclude = ["/.*", "/tools", "/DEVELOPMENT.md"]
description = """
A lightweight version of pin-project written with declarative macros.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo_check_external_types]
# The following are external types that are allowed to be exposed in our public API.
allowed_external_types = []

[workspace]
members = [
    "tests/no-core",
    "tests/no-std",
]

[lib]
doc-scrape-examples = false

[dev-dependencies]
macrotest = { git = "https://github.com/taiki-e/macrotest.git", branch = "dev-old-msrv" } # 2021 edition support + lower MSRV + no cargo-expand
rustversion = "1"
static_assertions = "1"
trybuild = "=1.0.67"

# For test on MSRV.
once_cell = "=1.14"
